[BACKEND-15]: adjust SurveyEntity to include who voted